fix: prevent fieldset from overflowing when its content has unbreakable text (refs FRI-850)

--- a/packages/design/src/components/fieldset/_fieldset.scss
+++ b/packages/design/src/components/fieldset/_fieldset.scss
@@ -7,6 +7,7 @@ $FIELDSET_SELECTOR: ".fieldset" !default;
 #{$FIELDSET_SELECTOR} {
     border: 0;
     margin: 0 0 densify(var(--f-margin-component-bottom));
+    min-width: 0;
     padding: 0;
     width: var(--f-width-full);
 
